2014-05-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-mime-inline-part): Redisplay a button so as to show
	the displaying state of a part.
	(gnus-mm-display-part): Don't insert a newline in the beginning of
	a part like gnus-mime-inline-part doesn't; work for XEmacs.

	* mm-decode.el (mm-display-part): Don't insert a newline in the top.
	(mm-shr): Make undisplayer unbreakable.

	* mm-view.el (mm-inline-image-emacs, mm-inline-image-xemacs): Don't
	insert excessive newline.
	(mm-inline-text-html-render-with-w3m, mm-inline-text)
	(mm-insert-inline): Make undisplayer unbreakable.

2014-05-01  Lars Magne Ingebrigtsen  <lars@ingebrigtsen.no>

	* gnus.el: Ma Gnus v0.11 is released.

2014-05-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-mm-display-part):
	Highlight header attachment buttons.

2014-04-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-mm-display-part): Don't move point while toggling
	a part; redisplay a button (enbugged in 2014-02-05).

2014-04-27  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el (auth-source-search, auth-source-search-backends):
	Treat :max 0 as an indicator that a boolean return is wanted, as
	documented. Reported by Joe Bloggs.

2014-04-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-icalendar.el: Require gnus-art.

2014-04-20  Jan Tatarik  <jan.tatarik@gmail.com>

	* gnus-icalendar.el (gnus-icalendar-event->org-entry)
	(gnus-icalendar--update-org-event): put event timestamp in
	the org entry body instead of the drawer.
	(gnus-icalendar-event--get-attendee-names): list of participants should
	contain even attendees without common name attribute.
	(gnus-icalendar--update-org-event): don't generate duplicates of empty
	property tags in org drawers.

2014-04-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gmm-utils.el (gmm-format-time-string): New function.

	* message.el (message-insert-formatted-citation-line): Use the original
	author's time zone to express a date string.
